[package]
name = "capture-plotter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
log = "0.4"
color-eyre = "0.6.2"
tracing = "0.1.32"
tracing-subscriber = { version="0.3.10", features = ["env-filter", "fmt", "ansi"] }
tracing-error = "0.2"
tokio = { version = "1", features=["full"]}
argh = "0.1.9"

rgb = "0.8"
console = "0.15"
textplots = "0.8.7"
ratatui = "0.29.0"
bushtelegram-dsp = { path = "../bushtelegram-dsp" }
lazy_static = "1"

eframe = "0.27"
egui = "0.27"
egui_plot = "0.27"
rustfft = "6.2" # Or latest
num-complex = "0.4"
crossbeam-channel = "0.5"
clap = { version = "4.5", features = ["derive"] }
env_logger = "0.11" # Or latest
byteorder = "1.5" # Or latest
chrono = "0.4" # For logging timestamp